Fix the overflow problem in a smarter way

--- a/app/_sass/_error.sass
+++ b/app/_sass/_error.sass
@@ -1,4 +1,5 @@
 .error-page
+  overflow: hidden
   padding-top: 0
 
 .tv-outer
@@ -17,7 +18,8 @@
   p
     position: absolute
     bottom: -60px
-    width: 100%
+    left: -400px
+    width: 1000px
     text-align: center
 
   &:before, &:after
